--- a/app.json
+++ b/app.json
@@ -31,6 +31,9 @@
       "quantity": 1
     }
   },
+  "scripts": { 
+   "postdeploy": "bundle exec rake db:schema:load db:seed",
+  },
   "addons": [
     "heroku-postgresql"
   ],
