--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
     }
   },
   "scripts": { 
-   "postdeploy": "bundle exec rake db:schema:load db:seed",
+   "postdeploy": "bundle exec rake db:schema:load db:seed"
   },
   "addons": [
     "heroku-postgresql"
